temp/unpackaged/objects/City__c.object
<CustomObject>
    <fields>
        <fullName>City_No__c</fullName>
        <displayFormat>CN-{00000}</displayFormat>
        <label>City No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Andrapradesh</fullName>
                </value>
                <value>
                    <fullName>Odisha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bangalore</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bangalores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>